@@ -2,7 +2,8 @@
 
 	* lib/rubygems/commands/update_command.rb:  Only update gems that need
 	updates.  Fixes bug #14780 by Mathieu Lajugie.  Don't force
-	remote-only updates.
+	remote-only updates.  Properly handle dependencies when updating.
+	Fixes bug #17488 by Hongli Lai.
 	* lib/rubygems/commands/environment_command.rb:  Display path as a
 	usable path.
 	* lib/rubygems.rb:  Don't add APPLE_GEM_HOME with ENV['GEM_HOME'].
